<resources>
    <string name="app_name">LavSeeker</string>
    <string name="app_name_long">LavSeeker</string>
    <string name="activity_about">About</string>
    <string name="activity_settings">Settings</string>
    <string name="lavatories">Lavatories</string>
    <string name="activity_manage">Manage locations</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_rainviewer" translatable="false">Rain Viewer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="next">Next</string>
    <string name="okay">Okay</string>
    <string name="slide1_heading">Welcome!</string>
    <string name="slide1_text">LavSeeker shows lavatories for your locations.</string>
    <string name="slide2_heading">How To</string>
    <string name="slide2_text">You can choose your own locations and get lavatories in their vicinity. Clicking on a lavatory shows the lavatory in a map application.</string>
    <string name="slide3_heading" translatable="false">Github</string>
    <string name="slide3_text">The sourcecode of this app is available at GitHub. For further explanations have a look at the About Page.</string>
    <string name="card_lavatories_heading">Last update</string>
    <string name="card_error_content">Please try to update!</string>
    <string name="about_privacy_heading">Privacy Info</string>
    <string name="about_permission_internet_description">Connecting to the Network: This permission is needed because data is retrieved by making requests to servers on the Internet. Without this permission, no price information can be received. Optional: authorization for GPS.</string>
    <string name="about">About</string>
    <string name="version_number">Version</string>
    <string name="about_license">License</string>
    <string name="about_license_text">This application is derived from Privacy Friendly Weather, developed by the research group SECUSO. Source code licensed under GPLv3. The app uses icons from Google Material Design Icons licensed under Apache License Version 2.0, Android Volley which is licensed under Apache License Version 2.0, AndroidX libraries which is licensed under Apache License Version 2.0, AutoSuggestTextViewAPICall which is licensed under Apache License Version 2.0, osmdroid which is licensed under Apache License Version 2.0, and AndroidAddressFormatter which is licensed under MIT License</string>
    <string name="about_more_info">More information can be found on:</string>
    <string name="about_github" translatable="false"><a href="https://github.com/woheller69/lavatories">Github-Repo</a></string>
    <string name="about_openstreetmap" translatable="false"><a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a></string>
    <string name="activity_settings_title">Settings</string>
   <string name="settings_title_API">API Key</string>
    <string name="settings_description_API">LavSeeker receives data from OpenStreetMap</string>
    <string name="settings_title_API_key">Enter API Key</string>
    <string name="dialog_add_label">Enter the location to add:</string>
    <string name="dialog_add_no_city_found">No location was found that matches your input. It is recommended to select one of the items from the dropdown list.  </string>
    <string name="dialog_add_close_button">Close</string>
    <string name="dialog_add_add_button">Add</string>
    <string name="error_convert_to_json">The retrieved data was not well-formed. </string>
    <string name="error_no_internet">Your Device is not connected to the Internet</string>
    <string name="error_fetch_lavatories">Error retrieving data, please try again!</string>
    <string name="error_no_city_selected">There is no city selected. To select a city go to \"Manage locations\".</string>
    <string name="error_no_radius_search_result">No city found. Increase search radius</string>
    <string name="error_no_map_app">No map application installed</string>
    <string name="settings_search_radius">Search radius</string>
    <string name="settings_interval_5" translatable="false">5 min</string>
    <string name="settings_interval_10" translatable="false">10 min</string>
    <string name="settings_interval_15" translatable="false">15 min</string>
    <string name="settings_interval_30" translatable="false">30 min</string>
    <string name="settings_intervals">Intervals</string>
    <string name="settings_update_interval">Update interval</string>
    <string name="settings_interval_summary">Set the interval of automatic updates</string>
    <string name="about_privacy_answer">LavSeeker only uses the permission \"Internet\" to retrieve price data. It further does not include any tracking mechanisms or advertisement.</string>
    <string name="about_where_from">Where does the information come from?</string>
    <string name="about_where_from_answer">Information is fetched from</string>
    <string name="about_permissions">Permissions</string>
    <string name="long_press_text">Hold and drag to sort.</string>
    <string name="swipe_to_delete">Swipe to delete</string>
    <string name="settings_title_display_options">Display options</string>
    <string name="registerTK">Information is fetched from OpenStreetMap</string>
    <string name="registerTKbutton">Register for free</string>
    <string name="dialog_edit_change_button">Modify</string>
    <string name="edit_location_hint_name">Name</string>
    <string name="edit_location_hint_ID" translatable="false">ID</string>
    <string name="settings_darkmode">Android 10+ Dark Mode</string>
    <string name="settings_position">Position</string>
    <string name="settings_GPS_summary">Allow usage of current GPS position in first TAB and in the widget. Position update is triggered automatically by widget.</string>
    <string name="settings_GPS_position">Allow GPS usage</string>
    <string name="error_no_position">No position available</string>
    <string name="settings_time24h">24-hour format</string>
    <string name="summary_time24h">Override system setting</string>
    <string name="dialog_OK_button">OK</string>
    <string name="dialog_NO_button">No</string>
    <string name="dialog_Later_button">Maybe later</string>
    <string name="dialog_StarOnGitHub">Do you like this app? Please give a star on GitHub or buy the developer a coffee via PayPal.</string>
    <string name="closed">Closed</string>
    <string name="open">Open</string>
    <string name="error_no_lavatory_found">No lavatories found</string>
    <string name="preferred_brands">Preferred brands (comma separated)</string>
    <string name="settings_type">Type</string>
    <string name="settings_type_all">All</string>
    <string name="settings_sort">Sort by price</string>
    <string name="settings_sort_summary">Only if single type selected</string>
    <string name="action_position">Update Location</string>
    <string name="settings_GPS_manual">Manual update only</string>
    <string name="error_no_gps">Please turn on GPS</string>
    <string name="settings_map">Show map</string>
    <string name="github" translatable="false">GitHub</string>

</resources>
